[gd_scene load_steps=6 format=3 uid="uid://dojxi6wqwicjx"]

[ext_resource type="Texture2D" uid="uid://dctn0ylea3bqn" path="res://assets/images/kenney_crosshairPack/PNG/White/crosshair188.png" id="1_ibrme"]
[ext_resource type="Script" path="res://componets/player/cross_hair.gd" id="1_km4yv"]
[ext_resource type="Resource" uid="uid://ce2n6cf4dqt8m" path="res://componets/player/player_info.tres" id="2_w34tx"]

[sub_resource type="LabelSettings" id="LabelSettings_w1euc"]
font_size = 12
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_grxod"]
font_size = 12
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="CrossHair" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_km4yv")
PlayerInfo = ExtResource("2_w34tx")

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ibrme")
metadata/_edit_lock_ = true

[node name="BulletLeft" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = -24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Smple Text"
label_settings = SubResource("LabelSettings_w1euc")
horizontal_alignment = 1

[node name="BulletRight" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Smple Text"
label_settings = SubResource("LabelSettings_grxod")
horizontal_alignment = 1

[node name="LeftBarrelList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -88.0
offset_right = -24.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
scroll_deadzone = 100

[node name="ItemList" type="ItemList" parent="LeftBarrelList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_search = false

[node name="RightBarrelList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -88.0
offset_right = 128.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
scroll_deadzone = 100

[node name="ItemList" type="ItemList" parent="RightBarrelList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_search = false
